fix: mistake with filtering category. it is needed for bases only
